--- a/parts/res/xml/doze_settings.xml
+++ b/parts/res/xml/doze_settings.xml
@@ -22,7 +22,7 @@
     <com.android.settingslib.widget.MainSwitchPreference
         android:defaultValue="false"
         android:key="doze_enable"
-        android:title="@string/ambient_enable" />
+        android:title="@string/ambient_display_enable_title" />
 
     <SwitchPreference
         android:key="always_on_display"
@@ -34,7 +34,7 @@
 
     <ListPreference
         android:key="doze_brightness"
-        android:defaultValue="1"
+        android:defaultValue="2"
         android:title="@string/doze_brightness_title"
         android:summary="@string/doze_brightness_summary"
         android:entries="@array/doze_brightness_level"
