--- a/parts/res/values/arrays.xml
+++ b/parts/res/values/arrays.xml
@@ -27,7 +27,7 @@
     </string-array>
 
     <!-- Values for Dirac headset pref -->
-    <string-array name="dirac_headset_pref_entries" translatable="false">
+    <!-- <string-array name="dirac_headset_pref_entries" translatable="false">
         <item>@string/dirac_headset_earbuds</item>
         <item>@string/dirac_headset_in_ear_2013</item>
         <item>@string/dirac_headset_piston_1</item>
@@ -52,9 +52,9 @@
         <item>@string/dirac_headset_bluetooth_collar</item>
         <item>@string/dirac_headset_bluetooth_linefree</item>
         <item>@string/dirac_headset_redmi_earphones</item>
-    </string-array>
+    </string-array> -->
 
-    <string-array name="dirac_headset_pref_values" translatable="false">
+    <!-- <string-array name="dirac_headset_pref_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
@@ -79,10 +79,10 @@
         <item>26</item>
         <item>27</item>
         <item>28</item>
-    </string-array>
+    </string-array> -->
 
     <!-- Values for Dirac preset pref -->
-    <string-array name="dirac_preset_pref_entries" translatable="false">
+    <!-- <string-array name="dirac_preset_pref_entries" translatable="false">
         <item>@string/dirac_preset_default</item>
         <item>@string/dirac_preset_rock</item>
         <item>@string/dirac_preset_jazz</item>
@@ -136,5 +136,5 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
-    </string-array> 
+    </string-array> -->
 </resources>
